--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
+    "dotenv": "^16.4.5",
     "i18next": "^23.12.2",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.5.2",
+    "jsonwebtoken": "^9.0.2",
+    "lunar-date-calculator": "^1.1.2",
+    "moon-time": "^2.4.0",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
@@ -30,9 +34,12 @@
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.12",
+    "vietnamese-date": "^1.1.1",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
